fixed transition on social bar

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -360,7 +360,7 @@ html {
     #follow-us img {
       vertical-align: middle;
       margin-bottom: 3px;
-      margin-right; 4px;
+      margin-right: 4px;
     }
     
     #follow-us img.scale:hover {
