--- a/css/main.css
+++ b/css/main.css
@@ -147,7 +147,7 @@ a:focus {
     padding: 100px 0;
     text-align: center;
     color: #fff;
-    background: url(../img/coversoul_high.jpg) no-repeat bottom center scroll;
+    /*background: url(../img/coversoul_high.jpg) no-repeat bottom center scroll;*/
     /*background: url(../img/intro-bg.jpg) no-repeat bottom center scroll;*/
     background-color: #000;
     -webkit-background-size: contain;
